#
# Copyright (c) 2018 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#


#All exported headers
nobase_include_HEADERS=opx/hal_if_mapping.h opx/nas_types.h opx/nas_switch.h opx/nas_base_utils.h opx/nas_base_obj.h opx/nas_vlan_consts.h opx/nas_qos_consts.h opx/nas_ndi_obj_id_table.h opx/nas_if_utils.h opx/nas_sw_profile_api.h opx/nas_sw_profile.h opx/nas_vrf_utils.h

